<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_margin="20dp"
        android:src="@drawable/login"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"/>

    <EditText
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        android:layout_margin="20dp"
        android:id="@+id/tvEmail"
        android:textSize="20sp"
        android:textColorHint="@color/darkGray"
        android:background="@drawable/input_bg"
        android:padding="10dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_margin="20dp"
        android:id="@+id/tvPassword"
        android:background="@drawable/input_bg"
        android:padding="10dp"
        android:textColorHint="@color/darkGray"
        android:textSize="20sp"
        android:inputType="textPassword"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:id="@+id/btnLogIn"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/primary"
        android:layout_gravity="center"
        android:id="@+id/progressBar"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tvLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="#008EFF"
            android:textSize="15sp"/>

    </LinearLayout>

</LinearLayout>