<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".EmailVerifyActivity">

    <ImageButton
        android:id="@+id/backFromEmailVerifyBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/baseline_arrow_back"
        android:layout_marginTop="20dp"
        android:background="@color/white"/>


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/email"
        android:layout_marginTop="80dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/activate_your_notes_pro_id"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/an_email_has_been_sent_to"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/UserEmailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/your_email"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/please_follow_the_instructions_in_the_email_to_activate_your_notes_pro_id"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/darkGray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/verifyLoginBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/verified_log_in"
                android:textSize="15sp"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:textColor="@color/white"/>

        </RelativeLayout>

</LinearLayout>