<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".NoteDetailsActivity">

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/page_title_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_new_note"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="30sp"/>


        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/save_note_btn"
            android:src="@drawable/baseline_done"
            android:background="@color/primary"
            app:tint="@color/white"
            android:layout_gravity="center"/>

        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:indeterminateTint="@color/white"
            android:layout_gravity="center"
            android:id="@+id/editNoteProgressBar"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/white"
        android:padding="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/title_editText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/title"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"/>
        <EditText
            android:id="@+id/content_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/content"
            android:textColor="@color/black"
            android:minLines="10"
            android:gravity="start"
            android:textColorHint="@color/gray"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/delete_note_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_note"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_centerInParent="true"/>

    </RelativeLayout>


</LinearLayout>